--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@mui/material": "^5.10.14",
     "@mui/x-date-pickers": "^5.0.8",
+    "chart.js": "^4.0.1",
     "date-fns": "^2.29.3",
     "dayjs": "^1.11.6",
     "node-sass": "^7.0.3",
