--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
     "@mui/material": "^5.10.14",
     "@mui/x-date-pickers": "^5.0.8",
     "chart.js": "^4.0.1",
     "date-fns": "^2.29.3",
     "dayjs": "^1.11.6",
-    "node-sass": "^7.0.3",
+    "node-sass": "^8.0.0",
+    "openai": "^3.2.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.0.1",
     "react-dom": "^18.2.0",
