--- a/package.json
+++ b/package.json
@@ -13,15 +13,18 @@
     "@emotion/styled": "^11.10.6",
     "@mui/material": "^5.10.14",
     "@mui/x-date-pickers": "^5.0.8",
+    "@types/react-router-dom": "^5.3.3",
     "chart.js": "^4.0.1",
     "date-fns": "^2.29.3",
     "dayjs": "^1.11.6",
+    "jodit-react": "^1.3.39",
     "node-sass": "^8.0.0",
     "openai": "^3.2.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.0.1",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.6.0"
+    "react-icons": "^4.6.0",
+    "react-router-dom": "^6.9.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.25",
