--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "dayjs": "^1.11.6",
     "jodit-react": "^1.3.39",
     "node-sass": "^8.0.0",
-    "openai": "^3.2.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.0.1",
     "react-dom": "^18.2.0",
@@ -27,6 +26,7 @@
     "react-router-dom": "^6.9.0"
   },
   "devDependencies": {
+    "@types/node": "^18.15.5",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.8",
     "@vitejs/plugin-react": "^2.2.0",
