--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/material": "^5.10.14",
     "@mui/x-date-pickers": "^5.0.8",
     "@types/react-router-dom": "^5.3.3",
+    "axios": "^1.3.4",
     "chart.js": "^4.0.1",
     "date-fns": "^2.29.3",
     "dayjs": "^1.11.6",
