--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-chartjs-2": "^5.0.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
-    "react-router-dom": "^6.9.0"
+    "react-router-dom": "^6.9.0",
+    "rxjs": "^7.8.0"
   },
   "devDependencies": {
     "@types/node": "^18.15.5",
