--- a/package.json
+++ b/package.json
@@ -9,13 +9,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@emotion/react": "^11.10.6",
-    "@emotion/styled": "^11.10.6",
+    "@emotion/babel-plugin": "^11.9.2",
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
     "@mui/material": "^5.10.14",
     "@mui/x-date-pickers": "^5.0.8",
+    "@reduxjs/toolkit": "^1.9.5",
+    "@types/react-redux": "^7.1.25",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.3.4",
+    "babel-plugin-macros": "^2.6.1",
     "chart.js": "^4.0.1",
+    "cosmiconfig": "^8.1.3",
     "date-fns": "^2.29.3",
     "dayjs": "^1.11.6",
     "jodit-react": "^1.3.39",
@@ -24,8 +29,9 @@
     "react-chartjs-2": "^5.0.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.9.0",
-    "rxjs": "^7.8.0"
+    "yaml": "^2.2.2"
   },
   "devDependencies": {
     "@types/node": "^18.15.5",
