--- a/package.json
+++ b/package.json
@@ -31,12 +31,14 @@
     "react-icons": "^4.6.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.9.0",
+    "uuid": "^9.0.0",
     "yaml": "^2.2.2"
   },
   "devDependencies": {
     "@types/node": "^18.15.5",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.8",
+    "@types/uuid": "^9.0.1",
     "@vitejs/plugin-react": "^2.2.0",
     "sass": "^1.56.1",
     "typescript": "^4.8.4",
