--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@emotion/styled": "^11.9.3",
     "@mui/material": "^5.10.14",
     "@mui/x-date-pickers": "^5.0.8",
+    "@ramonak/react-progress-bar": "^5.0.3",
     "@reduxjs/toolkit": "^1.9.5",
     "@types/react-redux": "^7.1.25",
     "@types/react-router-dom": "^5.3.3",
+    "@uiball/loaders": "^1.2.6",
     "axios": "^1.3.4",
     "babel-plugin-macros": "^2.6.1",
     "chart.js": "^4.0.1",
