--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/x-date-pickers": "^5.0.8",
     "@ramonak/react-progress-bar": "^5.0.3",
     "@reduxjs/toolkit": "^1.9.5",
+    "@types/js-cookie": "^3.0.3",
     "@types/react-redux": "^7.1.25",
     "@types/react-router-dom": "^5.3.3",
     "@uiball/loaders": "^1.2.6",
@@ -26,6 +27,7 @@
     "date-fns": "^2.29.3",
     "dayjs": "^1.11.6",
     "jodit-react": "^1.3.39",
+    "js-cookie": "^3.0.5",
     "node-sass": "^8.0.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.0.1",
