--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@babel/core": "^7.22.5",
     "@emotion/babel-plugin": "^11.9.2",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
     "@mui/material": "^5.10.14",
-    "@mui/x-date-pickers": "^5.0.8",
+    "@mui/x-date-pickers": "^6.9.0",
     "@ramonak/react-progress-bar": "^5.0.3",
     "@reduxjs/toolkit": "^1.9.5",
     "@types/js-cookie": "^3.0.3",
@@ -21,14 +22,14 @@
     "@types/react-router-dom": "^5.3.3",
     "@uiball/loaders": "^1.2.6",
     "axios": "^1.3.4",
-    "babel-plugin-macros": "^2.6.1",
+    "babel-plugin-macros": "^3.1.0",
     "chart.js": "^4.0.1",
     "cosmiconfig": "^8.1.3",
     "date-fns": "^2.29.3",
     "dayjs": "^1.11.6",
     "jodit-react": "^1.3.39",
     "js-cookie": "^3.0.5",
-    "node-sass": "^8.0.0",
+    "node-sass": "^9.0.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.0.1",
     "react-dom": "^18.2.0",
@@ -40,13 +41,13 @@
     "yaml": "^2.2.2"
   },
   "devDependencies": {
-    "@types/node": "^18.15.5",
+    "@types/node": "^20.3.1",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.8",
     "@types/uuid": "^9.0.1",
-    "@vitejs/plugin-react": "^2.2.0",
-    "sass": "^1.56.1",
-    "typescript": "^4.8.4",
-    "vite": "^3.2.3"
+    "@vitejs/plugin-react": "^4.0.1",
+    "sass": "^1.63.6",
+    "typescript": "^5.1.3",
+    "vite": "^4.3.9"
   }
 }
