--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-icons": "^4.6.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.9.0",
+    "semver": "^7.5.3",
     "uuid": "^9.0.0",
     "yaml": "^2.2.2"
   },
